# PlotDistribution

./: CMakeLists.txt  README.md  main.cpp
scr/: dataGenerator.cpp  dataGenerator.h  game.cpp  game.h
